More comments + some fix